Update ModularLibraryOPCUA.java